rendered/simple-forms-style.css
/* Fonts */

@import url(https://fonts.googleapis.com/css?family=Open+Sans);
@font-face {
  font-family: "Yu Gothic";
  font-weight: 100;

  src: local("Yu Gothic Medium");
}
@font-face {
  font-family: "Yu Gothic";
  font-weight: 200;

  src: local("Yu Gothic Medium");
}
@font-face {
  font-family: "Yu Gothic";
  font-weight: 300;

  src: local("Yu Gothic Medium");
}
@font-face {
  font-family: "Yu Gothic";
  font-weight: 400;

  src: local("Yu Gothic Medium");
}
@font-face {
  font-family: "Yu Gothic";
  font-weight: bold;

  src: local("Yu Gothic Bold");
}
@font-face {
  font-family: "Yu Mincho";
  font-weight: 100;

  src: local("Yu Mincho Medium");
}
@font-face {
  font-family: "Yu Mincho";
  font-weight: 200;

  src: local("Yu Mincho Medium");
}
@font-face {
  font-family: "Yu Mincho";
  font-weight: 300;

  src: local("Yu Mincho Medium");
}
@font-face {
  font-family: "Yu Mincho";
  font-weight: 400;

  src: local("Yu Mincho Medium");
}
@font-face {
  font-family: "Yu Mincho";
  font-weight: bold;

  src: local("Yu Mincho Bold");
}

/* Spacing */

h1 {
  margin-bottom: 15px;
}
form {
  padding-bottom: 50px;
}
.form-group {
  margin-bottom: 50px;
}
label {
  font-weight: 400;
}
.ans {
  color: #777;
  font-size: 80%;
}
.sz-id-label {
  margin-right: 10px;
}

/* Interactive properties */

input[type=range].not-clicked::-webkit-slider-thumb {
    -webkit-appearance: none;
}

input[type=range].clicked::-webkit-slider-thumb {
    -webkit-appearance: sliderthumb-horizontal;
    /* This is a hack to deal with the fact that the thumb is rendered transparent */
    background: black;
}

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance:textfield;
}

